# nos

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  make.py  nos.g.py
.bonesinger/: cmake.yml  licant.yml
.github/workflows/: cmake.yml  licant.yml
doxygen/html/: annotated.html  arglist_8h.html  arglist_8h__dep__incl.map  arglist_8h__dep__incl.md5  arglist_8h__incl.map  arglist_8h__incl.md5  arglist_8h_source.html  buffer_8h_source.html  buffer__reader_8h_source.html  buffered__file_8h_source.html  classadapterbuf-members.html  classadapterbuf.html  classadapterbuf__coll__graph.map  classadapterbuf__coll__graph.md5  classes.html  classnos_1_1array__printable-members.html  classnos_1_1array__printable.html  classnos_1_1buffer-members.html  classnos_1_1buffer.html  classnos_1_1buffer__reader-members.html  classnos_1_1buffer__reader.html  classnos_1_1buffer__reader__inherit__graph.map  classnos_1_1buffer__reader__inherit__graph.md5  classnos_1_1buffered__file-members.html  classnos_1_1buffered__file.html  classnos_1_1buffered__file__coll__graph.map  classnos_1_1buffered__file__inherit__graph.md5  classnos_1_1cstring__writer-members.html  classnos_1_1cstring__writer.html  classnos_1_1cstring__writer__inherit__graph.map  classnos_1_1cstring__writer__inherit__graph.md5  classnos_1_1debug__ostream-members.html  classnos_1_1debug__ostream.html  classnos_1_1debug__ostream__coll__graph.map  classnos_1_1debug__ostream__coll__graph.md5  classnos_1_1exception-members.html  classnos_1_1exception.html  classnos_1_1exception__coll__graph.md5  classnos_1_1exception__inherit__graph.map  classnos_1_1file-members.html  (+449 more)
doxygen/latex/: annotated.tex  arglist_8h.tex  arglist_8h__dep__incl.md5  arglist_8h__incl.md5  classadapterbuf.tex  classadapterbuf__inherit__graph.md5  classnos_1_1array__printable.tex  classnos_1_1buffer.tex  classnos_1_1buffer__reader.tex  classnos_1_1buffer__reader__inherit__graph.md5  classnos_1_1buffered__file.tex  classnos_1_1buffered__file__coll__graph.md5  classnos_1_1cstring__writer.tex  classnos_1_1cstring__writer__inherit__graph.md5  classnos_1_1debug__ostream.tex  classnos_1_1debug__ostream__coll__graph.md5  classnos_1_1exception.tex  classnos_1_1exception__coll__graph.md5  classnos_1_1file.tex  classnos_1_1file__coll__graph.md5  classnos_1_1file__inherit__graph.md5  classnos_1_1has__fprint__method.tex  classnos_1_1has__nos__fprint.tex  classnos_1_1has__nos__print.tex  classnos_1_1has__print__method.tex  classnos_1_1has__std__ostream.tex  classnos_1_1hostaddr.tex  classnos_1_1inet_1_1tcpspam__server.tex  classnos_1_1inet_1_1tcpspam__server__coll__graph.md5  classnos_1_1iostorage.tex  classnos_1_1iostorage__coll__graph.md5  classnos_1_1iostream.tex  classnos_1_1iostream__coll__graph.md5  classnos_1_1iostream__inherit__graph.md5  classnos_1_1istorage.tex  classnos_1_1istorage__coll__graph.md5  classnos_1_1istorage__inherit__graph.md5  classnos_1_1istream.tex  classnos_1_1istream__inherit__graph.md5  classnos_1_1log_1_1logger.tex  (+127 more)
expers/: main.cpp  make.py
expers/log/: main.cpp  make.py
nos/: argparse.cpp  argparse.h  bugon.h  check.h  dprint.h  error.h  fprint.h  ilist.h  input.h  log.h  meta.h  panic.cpp  panic.h  print.h  printable.h  reflect.h  result.h  string.h  terminal.h  timestamp.h  trace.h  translator.h
nos/binary/: bytearray.h
nos/check/: check.h  env.cpp  env.h
nos/convert/: color.h
nos/dprint/: dprint.h  dprint_diag.c  dprint_func_impl.c
nos/fprint/: fprint.cpp  fprint.h  fstdtype.cpp  meta.h  spec.h  stdtype.cpp  stdtype.h  visitor.h
nos/inet/: common.cpp  hostaddr.h  socket.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  tcpspam_server.h  udp_socket.cpp  udp_socket.h
nos/input/: input-timeout-posix.cpp  input.cpp  input_error.h
nos/io/: buffer_reader.h  buffered_file.h  bytearray_istream.h  bytearray_ostream.h  circular_rectangle_stream.h  current_ostream_cout.cpp  debug_ostream.h  fdfile.h  fdlike.h  file.cpp  file.h  fstream.h  iostream.h  istream.cpp  istream.h  null_ostream.h  ostream.cpp  ostream.h  serial_port.cpp  serial_port.h  socket.h  sstream.h  std.cpp  std.h  std_adapter.h  stdfile.cpp  stdfile.h  string_writer.h
nos/log/: ilogger.h  level.cpp  level.h  logger.cpp  logger.h  logmsg.h  ostream_target.cpp  ostream_target.h  target.cpp  target.h  target_logger.h  tlogger.cpp  tlogger.h
nos/meta/: meta.h
nos/print/: meta.h  print.cpp  print.h  print_macro.h  stdtype.cpp  stdtype.h
nos/serialize/: deserialize.h  pbjson.h  serialize.h
nos/shell/: aggregate_executor.h  argv.h  cf_abstract.h  comfortable_function.h  command.h  executor.h  rpc.h  standart.cpp  standart.h  weaked_function.h  weaked_function_interpreter.h
nos/trent/: binder.h  json.cpp  json.h  json_print.h  json_settings.h  pbjson.h  schema.h  settings.h  trent.cpp  trent.h  trent_serializer.h
nos/util/: access.h  arglist.h  buffer.h  bugon_abort.c  bugon_error.cpp  ctrdtr.h  delegate.h  dstring.h  error.cpp  error.h  error_abort.cpp  error_throw.cpp  expected.h  fd.cpp  fd.h  hexascii.cpp  hexascii.h  horrible_cast.h  init_priority.h  macro.h  math.h  nos_numconvert.cpp  numconvert.c  numconvert.cpp  numconvert.h  osutil.cpp  osutil.h  osutil_unix.cpp  osutil_windows.cpp  printf_impl.c  result.h  sfinae.h  size.h  string.cpp  string.h  strtok.h  timestamp-millis.cpp  timestamp-undefined.cpp  trace.cpp
test/: circular_rectangle.cpp  dprint.cpp  fprint.cpp  fprint.hpp  main.cpp  make.py  print.cpp  print.hpp  socket.cpp  trace.cpp  trace.hpp  vector.cpp
test/dprint/: main.cpp  make.py
test/pp/: log.cpp
test/sfinae/: main.cpp  make.py
test/sfinae2/: main.cpp
tests/: check.cpp  comfortable_function.cpp  fprint.cpp  hex.cpp  input.cpp  iprint.cpp  json.cpp  log.cpp  make.py  pbjson.cpp  print.cpp  rpc.cpp  serialize.cpp  shell.cpp  spec.cpp  standart_shell.cpp  tcp_client_timeout.cpp  tcp_spam_server.cpp  timeouted_read.cpp  trent.cpp  weaked_function.cpp
tools/: Dockerfile  cmake-android.sh  dockerfile.arch  dockerfile.host  make-dist.sh
(+87 files in other folders)
